# sarspred-api

./: Dockerfile  README.md  Training Data.csv  main.py  metrics.csv  prediction.csv  prediction.smi  pyproject.toml  requirements.txt
weights/: KNN_model.pkl  XGBoost_model.pkl
