[project]
name = "sarspred-api"
version = "0.1.0"
description = "XGBoost-based COVID-19 drug compound activity prediction API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.118.2",
    "joblib>=1.5.2",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "rdkit>=2025.9.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sm>=0.1.8",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]
